# UndergraduateHomework

ANN/: README.md
ANN/hw1/: REPORT.md
ANN/hw1/code_analyze/: summary.txt
ANN/hw1/codes/: README.md  layers.py  loss.py  test.sh  (+3 more)
ANN/hw2/: REPORT.md  summary.txt
ANN/hw3/: summary.txt
ANN/hw4/: summary.txt
ComputerGraphics/: README.md
ComputerGraphics/code/: CMakeLists.txt  Makefile  cmake_install.cmake  run_all.sh
ComputerGraphics/code/include/: aabb.hpp  camera.hpp  curve.hpp  group.hpp  hit.hpp  kdtree.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ray.hpp  revsurface.hpp  scene_parser.hpp  smallpt.hpp  sphere.hpp  texture.hpp  transform.hpp  triangle.hpp  utils.hpp
ComputerGraphics/code/src/: image.cpp  main.cpp  mesh.cpp  scene_parser.cpp  utils.cpp
ComputerGraphics/code/testcases/: diamond1.txt  diamond2.txt  diamond3.txt  scene01.txt  scene02.txt  scene03.txt
LLMEfficiency/: readme.md
LLMEfficiency/flashattention/: config.py  main.py
LLMEfficiency/throughput/: benchmark_throughput.py
LLMEfficiency/throughput-latency/: run.sh
ML/: README.md
ML/ml2023_hw1/: test.ipynb
MallocLab/: mm.c
ModernWesternPhilosophy/: 第一次作业.docx  第三次作业.docx  第二次作业.docx  第四次作业.docx
NetworkSecurity/hw1/: REPORT.md  hw1.pkt
NetworkSecurity/hw2/: REPORT.md  hw1.pkt  hw1_副本.pkt  test.pkt
PhilosophyOfPhilosophy/: 第一次札记.docx  第三次札记.docx  第二次札记.docx  第四次札记.docx
SignalProcessing/exp3/: exp3.py  实验三.md  实验三.pptx
SignalProcessing/lab1/: REPORT.md  exp1.py  run_all.sh
SignalProcessing/lab2/: REPORT.md  main.py  sample.txt  sample_output.txt
(+363 files in other folders)
