CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(FINAL CXX)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()

ADD_SUBDIRECTORY(deps/vecmath)

FILE(GLOB FINAL_SOURCES src/*.cpp)

FILE(GLOB FINAL_INCLUDES include/*.hpp include/*.h)

SET(CMAKE_CXX_STANDARD 11)

SET(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp -I/opt/homebrew/Cellar/libomp/16.0.6/include")
SET(OpenMP_CXX_LIB_NAMES "libomp")
SET(OpenMP_libomp_LIBRARY "/opt/homebrew/Cellar/libomp/16.0.6/lib/libomp.dylib")

FIND_PACKAGE(OpenMP)
if (OPENMP_CXX_FOUND)
        ADD_EXECUTABLE(${PROJECT_NAME} ${FINAL_SOURCES} ${FINAL_INCLUDES})
        TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC vecmath OpenMP::OpenMP_CXX ${OpenCV_LIBS})
        # TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX ${OpenCV_LIBS})
        TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include)
endif()

# ADD_EXECUTABLE(${PROJECT_NAME} ${FINAL_SOURCES} ${FINAL_INCLUDES})
# TARGET_LINK_LIBRARIES(${PROJECT_NAME} vecmath)
# TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include)
